video chat working for 2 people successfully

--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -1,29 +1,4 @@
-<!-- <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>vedio</title>
-        <meta name="viewport" content="width=device-width initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        
-    </head>
-    <body> -->
-        <!-- <div class="container-fluid">
-            <div class="row h-100 w-100">        
-                <div class="col-12 col-sm-6 d-flex justify-content-center">
-                    <div class="embed-reponsive embed-responsive-16by9">
-                        <video class="embed-responsive-item" muted></video>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 d-flex justify-content-center">
-                    <div id= "peerDiv" class="embed-reponsive embed-responsive-16by9">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="/socket.io/socket.io.js"></script>
-    </body>
-</html> -->
+<html>
 <div [hidden]="!myVar">
 <div class="form-group"  id="selectRoom">
     <label>Video conferencing</label>
@@ -34,9 +9,6 @@
 
 <!-- <div id="consultingRoom" style="display:none"> -->
     <video id="localVideo" autoplay></video>
-    
-        <p>Aasif Sheikh is an Indian film, stage and television actor. He played the role of Prince Ajay Singh in India's first TV serial, Hum Log. He has appeared in numerous Bollywood films and TV serials. He acted in the TV series Yes Boss which ran from 1999 to 2009. Presently running sitcom series Bhabiji Ghar Par Hain!, has him playing the role of Vibhuti Narayan Mishra.</p>
-        <video id="remoteVideo" autoplay>HIII</video>
-
-    
+    <video id="remoteVideo" autoplay></video>
 <!-- </div> -->
+</html>
